<resources>
    <string name="app_name">FixIn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="judul">FIXin</string>
    <string name="buat">Buat</string>
    <string name="akun">Akun</string>
    <string name="lengkapi">Lengkapi data diri kamu di bawah, ya</string>
    <string name="lengkapi2">Lengkapi data diri kamu di bawah</string>
    <string name="nama">Nama</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="buatakun">Buat Akun</string>
    <string name="ketentuan1">Dengan membuat akun,
        -
        kamu telah menyetujui</string>
    <string name="ketentuan2">Ketentuan Layanan dan Kebijakan Privasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>