<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fixin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="password"
            app:argType="string" />
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fixin.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fixin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.fixin.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.fixin.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/fixerAfterRegisterFragment"
        android:name="com.example.fixin.FixerAfterRegisterFragment"
        android:label="fragment_register_after_fixer"
        tools:layout="@layout/fragment_fixer_after_register" >
        <action
            android:id="@+id/action_fixerAfterRegisterFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/invoiceFragment"
        android:name="com.example.fixin.InvoiceFragment"
        android:label="fragment_invoice"
        tools:layout="@layout/fragment_invoice" />
    <fragment
        android:id="@+id/fixHouseAfterRegister"
        android:name="com.example.fixin.FixHouseAfterRegisterFragment"
        android:label="fragment_fix_house_after_register"
        tools:layout="@layout/fragment_fix_house_after_register" >
        <action
            android:id="@+id/action_fixHouseAfterRegister_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.example.fixin.CreatePostFragment"
        android:label="fragment_create_post"
        tools:layout="@layout/fragment_create_post" />
    <fragment
        android:id="@+id/bukaJasaFixerFragment"
        android:name="com.example.fixin.BukaJasaFixerFragment"
        android:label="fragment_buka_jasa_fixer"
        tools:layout="@layout/fragment_buka_jasa_fixer" >
        <action
            android:id="@+id/action_bukaJasaFixerFragment_to_fixerAfterRegisterFragment"
            app:destination="@id/fixerAfterRegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/bukaFixHouseFragment"
        android:name="com.example.fixin.BukaFixHouseFragment"
        android:label="fragment_buka_fix_house"
        tools:layout="@layout/fragment_buka_fix_house" >
        <action
            android:id="@+id/action_bukaFixHouseFragment_to_fixHouseAfterRegister"
            app:destination="@id/fixHouseAfterRegister" />
    </fragment>
    <fragment
        android:id="@+id/fixHouseContentFragment"
        android:name="com.example.fixin.FixHouseContentFragment"
        android:label="fragment_fix_house_content"
        tools:layout="@layout/fragment_fix_house_content" />
</navigation>